--- a/arcdevelopment/package.json
+++ b/arcdevelopment/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.2",
     "react-dom": "^16.9.0",
+    "react-lottie": "^1.2.3",
     "react-router-dom": "^5.0.1",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
